--- a/app.css
+++ b/app.css
@@ -22,8 +22,8 @@
 
   /* Light Colors  */
   --accent: #57a0d9; /* Hover color */
-  --background: #f5f5f5; /* Background color */
-  --cards: #e4e6e6; /* Cards color */
+  --background: #1e1e2e; /* Background color */
+  --cards: #45475a; /* Cards color */
 
   /* Image background  */
   --imgbg: url(assets/background.jpg); /* Image URL */
