--- a/app.css
+++ b/app.css
@@ -21,7 +21,7 @@
   --sfg: #494949; /* Sceondary Foreground color */
 
   /* Light Colors  */
-  --accent: #57a0d9; /* Hover color */
+  --accent: #9399b2; /* Hover color */
   --background: #1e1e2e; /* Background color */
   --cards: #45475a; /* Cards color */
 
@@ -35,13 +35,13 @@
 
 .darktheme {
   /* Dark Colors  */
-  --accent: #57a0d9; /* Hover color */
-  --background: #19171a; /* Background color */
-  --cards: #201e21; /* Cards color */
+  --accent: #9399b2; /* Hover color */
+  --background: #1e1e2e; /* Background color */
+  --cards: #45475a; /* Cards color */
 
   /* Fonts Color */
-  --fg: #d8dee9; /* Foreground color */
-  --sfg: #2c292e; /* Secondary Foreground color */
+  --fg: #cdd6f4; /* Foreground color */
+  --sfg: #a6adc8; /* Secondary Foreground color */
 
   /* Image background  */
   --imgcol: linear-gradient(
